--- a/public/potree_libs/potree/potree.css
+++ b/public/potree_libs/potree/potree.css
@@ -56,7 +56,7 @@
 	width:		350px;
 	height:		100%;
 	overflow-y:	scroll;
-	font-size:	85%;
+	font-size:	10px !important;
 	border-right:	1px solid black;
 	background-color:	var(--bg-color);
 }
@@ -64,7 +64,7 @@
 #sidebar_root{
 	color:				var(--font-color);
 	font-family:		Arial,Helvetica,sans-serif;
-	font-size:			1em;
+	font-size:			10px !important;
 }
 
 .potree_failpage{
@@ -119,7 +119,6 @@
 .potree_sidebar_brand{
 	margin:			1px 20px;
 	line-height:	2em;
-	font-size:		100%;
 	font-weight:	bold;
 	position:		relative;
 	display:		flex; 
