--- a/public/potree_libs/potree/potree.css
+++ b/public/potree_libs/potree/potree.css
@@ -1,3 +1,4 @@
+
 /* CSS - Cascading Style Sheet */
 /* Palette color codes */
 /* Palette URL: http://paletton.com/#uid=13p0u0kex8W2uqu8af7lEqaulDE */
@@ -56,7 +57,7 @@
 	width:		350px;
 	height:		100%;
 	overflow-y:	scroll;
-	font-size:	10px !important;
+	font-size:	85%;
 	border-right:	1px solid black;
 	background-color:	var(--bg-color);
 }
@@ -64,7 +65,7 @@
 #sidebar_root{
 	color:				var(--font-color);
 	font-family:		Arial,Helvetica,sans-serif;
-	font-size:			10px !important;
+	font-size:			1em;
 }
 
 .potree_failpage{
@@ -119,6 +120,7 @@
 .potree_sidebar_brand{
 	margin:			1px 20px;
 	line-height:	2em;
+	font-size:		100%;
 	font-weight:	bold;
 	position:		relative;
 	display:		flex; 
@@ -307,9 +309,10 @@ a:hover, a:visited, a:link, a:active{
 	opacity:	0.5;
 }
 
+
 canvas { 
 	width: 100%; 
-	/* margin-top: 200px; */
+	height: 100% 
 }
 
 body{ 
